platform/opentelemetry-operator/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: opentelemetry-operator
  labels:
    pod-security.kubernetes.io/enforce: restricted
